--- a/styles.css
+++ b/styles.css
@@ -1,64 +1,98 @@
-body, p {
-    margin: 0;
-    padding: 0;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
+body {
+  height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/*----------header/nav----------*/
 nav {
-    display: flex;
-    justify-content: space-around;
-    width: 15%;
-    margin-left: auto;
-    padding: 1.5em;
+  display: flex;
+  justify-content: space-around;
+  width: 16%;
+  margin-left: auto;
+  padding: 1.5em;
+  font-size: 14px;
 }
-
 a {
-    text-decoration: none;
-    cursor: pointer;
+  text-decoration: none;
+  cursor: pointer;
 }
-
 a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 nav img {
-    height: 20px;
-}
-main {
-    width: 50%;
-    margin: 0em auto 12.8em;
-    text-align: center;
+  height: 21px;
+  position: relative;
+  top: -2px;
 }
 
-input {
-    width: 80%;
-    padding: 1em;
-    margin-top: 2em;
-    border-radius: 30px;
-    border: 1px solid rgb(202, 200, 200);
+/*----------main section----------*/
+main {
+  width: 100%;
+  text-align: center;
+  margin-top: 15px;
 }
-.btn-container {
-    margin-top: 1em;
+.main-input {
+  display: flex;
+  margin: auto;
+  width: 44%;
+  margin-top: 20px;
+  padding: 16px;
+  border-radius: 24px;
+  border: 1px solid rgb(202, 200, 200);
+  outline: none !important;
 }
-.btn-container button {
-    padding: 1em;
-    border: none;
-    margin: 0 5px;
+.main-input:hover {
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 3px 8px;
 }
-footer {
-    background-color: rgb(224, 224, 224);
+.main-button {
+  margin-top: 25px;
+  padding: 12px;
+  width: 140px;
+  text-align: center;
+  font-size: 14px;
+  border: none;
+  background-color: #f8f9fa;
+  color: #3c4043;
+  cursor: pointer;
+}
+.main-button:hover {
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 3px 8px;
+}
+.languages {
+  margin-top: 24px;
+  font-size: 13px;
+}
+.languages a {
+  margin-left: 5px;
+}
+
+/*----------footer section-----------*/
+.footer {
+  background-color: #f8f9fa;
+  margin-top: 226px;
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.54);
 }
 .footer_top {
-    padding: 1em;
-    margin-left: 1em;
+  padding: 14px 0px 14px 1.5em;
+  border-bottom: 1px solid #dadce0;
 }
 .footer_bottom {
-    padding: 1em;
-    margin-left: 1em;
-    display: flex;
-    justify-content: space-between;
-    border-top: 1px solid gray;
+  padding: 17px 0px 17px 2em;
+  display: flex;
+  justify-content: space-between;
+}
+.footer-img {
+  width: 12px;
 }
 .left a {
-    margin-right: 1.5em;
+  margin-right: 1.5em;
 }
 .right a {
-    margin-right: 1em;
+  margin-right: 1.5em;
 }
